<resources>
    <string name="app_name">Percept of Personality</string>
    <string-array name="gender">
        <item>Select Gender:-</item>
        <item>Male</item>
        <item>Female</item>
        <item>Rather Not Stay</item>
    </string-array>

    <string-array name="profession">
        <item>Select Profession:-</item>
        <item>Student</item>
        <item>House Maker</item>
        <item>Business person</item>
    </string-array>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="gotoSignUp">Don\'t have an account? <u>Sign up</u></string>
    <string name="gotoLogin">Already have an account? <u>Log in</u></string>
    <string name="skip"><u>Skip Login</u></string>
    <string name="Open">NavBar</string>
    <string name="Close">Close</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Feedback</string>
    <string name="logout">Logout</string>
    <string name="title_activity_hamburger">Hamburger</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>

    <string name="facebook_app_id">646848465707856</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
</resources>
