<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/account"
            android:icon="@drawable/user"
            android:title="@string/my_account" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/setting"
            android:title="@string/settings" />
        <item
            android:id="@+id/login"
            android:icon="@drawable/login"
            android:title="@string/login"/>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/rating"
            android:icon="@drawable/rate_review"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/contact"
            android:icon="@drawable/contact"
            android:title="@string/contact_us" />
    </group>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />

</menu>